k8s/sandbox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox-pdg
  labels:
    name: sandbox-pdg
    environment: sandbox
    project: 224solutions
    purpose: testing
    managed-by: ci-cd
